added accuracy metrics

--- a/autoencoder-v2.ipynb
+++ b/autoencoder-v2.ipynb
@@ -286,6 +286,7 @@
    "source": [
     "early_stopping = EarlyStopping(\n",
     "    monitor=\"loss\",\n",
+    "    min_delta=0.0001,\n",
     "    patience=5,\n",
     "    verbose=0,\n",
     "    mode=\"min\",\n",
@@ -541,29 +542,6 @@
     "print(\"Shape of input data: \", test_dataset[0].shape)\n",
     "print(\"Shape of encoded data: \", encoded_data[0].shape)\n",
     "print(\"Shape of reconstructed data: \", reconstructed_data[0].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of encoded data after flattening:  (65536,)\n",
-      "Shape of encoded data after reshaping flattened array format:  (16, 16, 16, 16)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This will convert the encoded data of each model (which is of shape 16x16x16x16) to a 1D array of 65536 elements\n",
-    "encoded_data_flattened = encoded_data[0].flatten()\n",
-    "print(\"Shape of encoded data after flattening: \", encoded_data_flattened.shape)\n",
-    "# This will convert the above array of 65536 elements back to the original encoder output of 8x8x8x8 dimensions (4D array)\n",
-    "encoded_regenerated = encoded_data_flattened.reshape(16, 16, 16, 16)\n",
-    "print(\"Shape of encoded data after reshaping flattened array format: \", encoded_regenerated.shape)"
    ]
   },
   {
