added % values of accuracy

--- a/autoencoder-v2.ipynb
+++ b/autoencoder-v2.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "### Metrics\n",
     "1. loss: 0.0205\n",
-    "2. accuracy: 0.9906\n",
+    "2. accuracy: 0.9906 (99.06%)\n",
     "3. val_loss: 0.0142\n",
-    "4. val_accuracy: 0.9938\n",
+    "4. val_accuracy: 0.9938 (99.38%)\n",
     "\n",
     "### Encoder architecture\n",
     "- Conv3D(32, (3, 3, 3), activation='elu', padding='same')\n",
