added encoder visualization to v1, v2 - edited v3

--- a/autoencoder-v2.ipynb
+++ b/autoencoder-v2.ipynb
@@ -626,6 +626,73 @@
     "path = \"sample-outputs/v2/\" + \"reconstructed-\" + str(index) + \".ply\"\n",
     "Visualization.open3d_visualize_reconstructed(reconstructed_sample, path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing encoded data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_encoded_data = encoded_data[index]\n",
+    "print(sample_encoded_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sample_encoded_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.35\n",
+    "binary_arrays = (sample_encoded_data >= threshold).astype(int)\n",
+    "print(binary_arrays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "colors = plt.cm.get_cmap('tab20', len(binary_arrays))\n",
+    "\n",
+    "for i, binary_array in enumerate(binary_arrays):\n",
+    "    x, y, z = np.where(binary_array == 1)\n",
+    "    ax.scatter(x, y, z, c=colors(i), marker='o', s=20, label=f'Channel {i + 1}')\n",
+    "\n",
+    "ax.set_box_aspect([1, 1, 1])\n",
+    "\n",
+    "ax.set_xlabel('X')\n",
+    "ax.set_ylabel('Y')\n",
+    "ax.set_zlabel('Z')\n",
+    "\n",
+    "ax.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
