cleaned up directories, removed unnecesary files

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Autoencoder v3\n",
-    "Re-implemented v2 with enhancements\n",
+    "# CAD-DR: CAD Dimensionality Reduction\n",
     "\n",
     "### Information\n",
     "1. Eight-layer architecture (4 in encoder + 4 in decoder)\n",
@@ -13,6 +12,7 @@
     "3. Train - 800 models\n",
     "4. Test - 200 models\n",
     "5. Epochs - 50\n",
+    "6. Point cloud density - 20k points\n",
     "\n",
     "### Metrics\n",
     "1. loss: 0.0180\n",
@@ -24,18 +24,24 @@
     "- Conv3D(32, (3, 3, 3), activation='selu', padding='same')\n",
     "- AveragePooling3D((2, 2, 2), padding='same')\n",
     "- Conv3D(16, (3, 3, 3), activation='selu', padding='same')\n",
-    "- AveragePooling3D((2, 2, 2), padding='same')\n",
-    "\n",
-    "### Changelog\n",
-    "#### First attempt\n",
-    "- Point cloud of 15k points\n",
-    "- SELU activation function instead of ELU which was used in v2\n",
-    "- AveragePooling3D instead of MaxPooling3D\n",
-    "- Loss reduced from 0.0214 to 0.0192\n",
-    "#### Second attempt\n",
-    "- Point cloud of 20k points\n",
-    "- Loss reduced from 0.0192 to 0.0180\n",
-    "- The same setup was run again, but with Leaky ReLU - loss increased to 0.0204, so it was decided to stick to SELU"
+    "- AveragePooling3D((2, 2, 2), padding='same')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Run this cell in case you haven't installed the required libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install numpy pandas pyntcloud open3d\n",
+    "!pip install tensorflow[and-cuda]"
    ]
   },
   {
@@ -157,7 +163,7 @@
    "outputs": [],
    "source": [
     "directory = \"abc-dataset-ply/\"\n",
-    "# Taking first 1000 models\n",
+    "\n",
     "files = sorted([filename for filename in os.listdir(directory) if os.path.isfile(os.path.join(directory, filename))])\n",
     "dataset = []\n",
     "\n",
@@ -205,14 +211,12 @@
     }
    ],
    "source": [
-    "# Load your dataset into numpy arrays\n",
     "dataset = np.array(dataset)\n",
     "\n",
-    "# Split your dataset into train and test datasets\n",
-    "train_dataset = dataset[:800]  # Adjust the number as needed\n",
-    "test_dataset = dataset[800:]   # The remaining data for testing\n",
+    "train_dataset = dataset[:800]  \n",
+    "test_dataset = dataset[800:]   \n",
     "print(len(train_dataset), len(test_dataset))\n",
-    "# Define the input shape\n",
+    "\n",
     "input_shape = (64, 64, 64, 1)"
    ]
   },
@@ -318,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_filepath = 'checkpoints/v3/checkpoint'\n",
+    "checkpoint_filepath = 'checkpoints/checkpoint'\n",
     "model_checkpoint_callback = ModelCheckpoint(\n",
     "    filepath=checkpoint_filepath,\n",
     "    save_weights_only=True,\n",
@@ -538,8 +542,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "autoencoder.save(\"saved-models/v3/autoencoder-v3.keras\")\n",
-    "encoder.save(\"saved-models/v3/encoder-v3.keras\")"
+    "autoencoder.save(\"saved-models/autoencoder.keras\")\n",
+    "encoder.save(\"saved-models/encoder.keras\")"
    ]
   },
   {
@@ -640,8 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"sample-outputs/v3/\" + \"original-\" + str(index) + \".ply\"\n",
-    "Visualization.open3d_visualize_original(original_sample, path)"
+    "Visualization.open3d_visualize_original(original_sample)"
    ]
   },
   {
@@ -650,8 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"sample-outputs/v3/\" + \"reconstructed-\" + str(index) + \".ply\"\n",
-    "Visualization.open3d_visualize_reconstructed(reconstructed_sample, path)"
+    "Visualization.open3d_visualize_reconstructed(reconstructed_sample)"
    ]
   },
   {
