--- a/Model.ipynb
+++ b/Model.ipynb
@@ -6,8 +6,10 @@
    "source": [
     "# CAD-DR: CAD Dimensionality Reduction\n",
     "\n",
+    "A deep convolutional autoencoder for dimensionality reduction of 3D CAD models\n",
+    "\n",
     "### Information\n",
-    "1. Eight-layer architecture (4 in encoder + 4 in decoder)\n",
+    "1. Ten-layer architecture (5 in encoder + 5 in decoder)\n",
     "2. Dataset - 1000 STL files\n",
     "3. Train - 800 models\n",
     "4. Test - 200 models\n",
@@ -213,8 +215,11 @@
    "source": [
     "dataset = np.array(dataset)\n",
     "\n",
-    "train_dataset = dataset[:800]  \n",
-    "test_dataset = dataset[800:]   \n",
+    "train_dataset_length = int(0.8 * len(dataset))\n",
+    "test_set_length = int(0.2 * len(dataset))\n",
+    "\n",
+    "train_dataset = dataset[:train_dataset_length]  \n",
+    "test_dataset = dataset[train_dataset_length:]   \n",
     "print(len(train_dataset), len(test_dataset))\n",
     "\n",
     "input_shape = (64, 64, 64, 1)"
@@ -336,6 +341,16 @@
    "metadata": {},
    "source": [
     "### Training autoencoder, prediction done on test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 10\n",
+    "EPOCHS = 50"
    ]
   },
   {
@@ -491,7 +506,7 @@
     "autoencoder = Model(input_data, decoded)\n",
     "autoencoder.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "autoencoder.fit(train_dataset, train_dataset, epochs=50, batch_size=10, validation_data=(test_dataset, test_dataset), callbacks=[early_stopping, model_checkpoint_callback])"
+    "autoencoder.fit(train_dataset, train_dataset, epochs=EPOCHS, batch_size=BATCH_SIZE, validation_data=(test_dataset, test_dataset), callbacks=[early_stopping, model_checkpoint_callback])"
    ]
   },
   {
@@ -508,7 +523,7 @@
     }
    ],
    "source": [
-    "reconstructed_data = autoencoder.predict(test_dataset, batch_size=10)"
+    "reconstructed_data = autoencoder.predict(test_dataset, batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -526,7 +541,7 @@
    ],
    "source": [
     "encoder = Model(autoencoder.input, autoencoder.layers[5].output)\n",
-    "encoded_data = encoder.predict(test_dataset, batch_size=10)"
+    "encoded_data = encoder.predict(test_dataset, batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -589,7 +604,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "index = 55\n",
+    "index = 55 # change this value to visualize different models and their reconstructions\n",
     "\n",
     "original_sample = test_dataset[index]\n",
     "\n",
